dt-bindings: imx8m-ddrc: Add devfreq-events property
Like other devfreq driver imx8m-ddrc can measure memory bandwith usage.
This is only enabled if a link is provided to the imx8m ddr pmu.

The property name "devfreq-events" is also used by other devfreq drivers
with similar semantics.

Signed-off-by: Leonard Crestez <leonard.crestez@nxp.com>
Acked-by: Chanwoo Choi <cw00.choi@samsung.com>

--- a/Documentation/devicetree/bindings/memory-controllers/fsl/imx8m-ddrc.yaml
+++ b/Documentation/devicetree/bindings/memory-controllers/fsl/imx8m-ddrc.yaml
@@ -49,6 +49,10 @@ properties:
   operating-points-v2: true
   opp-table: true
 
+  devfreq-events:
+    description: Phandle of PMU node
+    $ref: "/schemas/types.yaml#/definitions/phandle"
+
 required:
   - reg
   - compatible
